--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-testing-library": "^3.9.2",
     "eslint-webpack-plugin": "^2.5.2",
     "file-loader": "6.1.1",
+    "formik": "^2.2.6",
     "foundation-sites": "^6.6.3",
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "4.5.0",
